--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,3 +1,15 @@
+@font-face {
+	font-family: "LXGWWenKaiMonoTC-Regular";
+	src: url("/fonts/LXGWWenKaiMonoTC-Regular.woff2") format("woff2");
+	font-weight: normal;
+	font-style: normal;
+	font-display: swap;
+}
+
+.font-lxgw {
+	font-family: "LXGWWenKaiMonoTC-Regular", sans-serif;
+}
+
 /* 統一的 CSS 變量 */
 :root {
 	/* 主要斷點 */
